--- a/index.html
+++ b/index.html
@@ -1,3 +1,70 @@
+
+---
+layout: default
+---
+
+&nbsp;
+Indice:
+&nbsp;
+1. Resumen
+2. Metafisica
+2.1. Flove
+3. Calculos
+3.1. Paradoja final
+3.1.1. Final paradox
+3.2. Cuenticos
+4. Determinismo vitalista
+4.1. Evolucion
+4.1.1. Adaptacion
+4.1.1.1. De lagrima a baba
+5. Fenomenologia...
+
+
+Text can be **bold**, _italic_, or ~~strikethrough~~.
+
+[Link to another page](another-page).
+
+There should be whitespace between paragraphs.
+
+There should be whitespace between paragraphs. We recommend including a README, or a file with information about your project.
+
+# [](#header-1)Header 1
+
+This is a normal paragraph following a header. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.
+
+## [](#header-2)Header 2
+
+> This is a blockquote following a header.
+>
+> When something is important enough, you do it even if the odds are not in your favor.
+
+### [](#header-3)Header 3
+
+```js
+// Javascript code with syntax highlighting.
+var fun = function lang(l) {
+  dateformat.i18n = require('./lang/' + l)
+  return true;
+}
+```
+
+```ruby
+# Ruby code with syntax highlighting
+GitHubPages::Dependencies.gems.each do |gem, version|
+  s.add_dependency(gem, "= #{version}")
+end
+```
+
+#### [](#header-4)Header 4
+
+*   This is an unordered list following a header.
+*   This is an unordered list following a header.
+*   This is an unordered list following a header.
+
+##### [](#header-5)Header 5
+
+1.  This is an ordered list following a header.
+
 <html>
   <body>
     https://notabug.org/aleph/FloveApp.git
